--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 authors = ["akarahdev"]
 description = "A library to serialize & deserialize data and upgrade data between versions"
+license = "MIT"
+license-file = "LICENSE"
+
+[features]
+datafixer = []
+serialization = []
