--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2024"
 authors = ["akarahdev"]
 description = "A library to serialize & deserialize data and upgrade data between versions"
 license = "MIT"
+
+[dependencies]
+json = { version = "0.12.4" }
