--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -8,5 +8,10 @@ edition = "2024"
 name = "playground"
 path = "./playground.rs"
 
+
+[[example]]
+name = "game_config"
+path = "./game_config.rs"
+
 [dev-dependencies]
 datafix = { workspace = true }
